Sun Oct 30 22:42:44 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/ciao.localityconfig:
        * dance/LocalityManager/Scheduler/Events/Connect.cpp:
        * dance/Plan_Launcher/Plan_Launcher_Base_Impl_T.cpp:

          Moved name service resolution of external reference endpoints into the
          CIAO deployment interceptors.

Tue Oct 25 17:30:32 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Split_Plan/Split_Plan.cpp:

          Moved openmp for loops inside __OPENMP ifdef, else we use
          CORBA::ULong types for loop index.

Tue Oct 25 17:29:44 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator.mpc:

          Added missing dynamicflags directive.

Sat Oct 22 22:01:01 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator_export.h:
        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator_impl.h:

          Export macros.

Tue Oct 20 09:30:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Thu Oct 13 07:17:02 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * dance/Logger/Log_Macros.h:
                  Fix complile errors when all logging is disabled.

        Wed Oct 12 13:09:40 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * dance/DAnCE_Core.mpc:
                * dance/LocalityManager/Configuration/Configuration.mpc:
                * dance/LocalityManager/Interceptors/Error_Interceptors.mpc:
                * dance/Plan_Launcher/Daemon/PL_Daemon.mpc:
                * tools/Artifact_Installation/Artifact_Installation.mpc:
                * tools/Convert_Plan/Convert_Plan.mpc:
                * tools/Logger_Backend/ndds/NDDS_Logger.mpc:
                * tools/System_Health/Interceptors/SHS_Interceptor.mpc:
                * tools/System_Health/System_Health.mpc: